# ternary-benchmark

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: benchmark.rs  ecology.rs  evolution.rs  exhaustive.rs  lib.rs  report.rs  scaling.rs  tests.rs
