[package]
name = "ternary-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark harness comparing FP32 vs ternary-packed kernels. Measures memory density, throughput, and accuracy tradeoffs for real GPU workloads."
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/ternary-benchmark"
documentation = "https://docs.rs/ternary-benchmark"
